--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ input {
   border-radius: 20px;
 }
 .operator:hover {
-  background-color: #ffdbdb;
+  background-color: #ff1e1e;
 }
 
 .clear {
@@ -106,8 +106,6 @@ input {
 
 .screen {
   background-color: rgb(20, 175, 214);
-
-  justify-content: left;
 
   border-radius: 10px;
 
