--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
   place-items: center;
 }
 .container {
-  border-radius: 9px;
-  background: #767474;
+  border-radius: 10px;
+  background: #5c7a84;
   box-shadow: 5px 5px 30px #148cfc, -5px -5px 30px #0de969;
 
   width: 300px;
-  height: 400px;
-  padding: 10px;
+  height: 370px;
+  padding: 40px 30px 0 30px;
 }
 
 .keys {
